<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nome_da_tarefa"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/data_prevista"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nome_data_prevista"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/nome_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/nome_status"
            android:textAlignment="center" />


    </LinearLayout>

</androidx.cardview.widget.CardView>